2006-12-12  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(insertUpdate): Added check to check if attribute set is 
	empty.
	(insertUpdate): Added check to determine if last character
	is a newline. If it is, we should not be fracturing.
	(insert): Added check to determine if attribute set is empty.
	If it is, insertUpdate should not be called.

2006-12-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* configure.ac: Check for isnan.

	* native/fdlibm/fdlibm.h: If we have a isnan function then do not
	define the macro.

2006-01-12  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/XMLParser.java: Corrected the handling of some XML
	  1.1 character ranges.

2006-01-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/TransferHandler.java:
	(TransferAction<init>): Call super constructor.  Fixes Mauve regression
	gnu/testlet/javax/swing/JTextField/CopyPaste.

2006-01-12  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* resource/Makefile.am: Install 
	logging.properties into $(prefix)/lib.
	* resource/Makefile.am (securitydir): Changed to 
	$(prefix)/lib/security.

2006-01-12  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTextField.java
	(createDefaultModel): Moved installation of the filterNewlines
	property to setDocument().
	(setDocument): New method. Installs the filterNewlines property
	on the document.

2006-01-12  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomNode.java,
	  gnu/xml/transform/ElementAvailableFunction.java: Removed debugging
	  output.
	* gnu/xml/xpath/NameTest.java,
	  gnu/xml/xpath/NamespaceTest.java,
	  gnu/xml/xpath/Selector.java: Fix regression for namespace axis
	  navigation.
	* gnu/xml/transform/MessageNode.java: Use standard logging system
	  for outputting messages.

2006-01-12  Tom Tromey  <tromey@redhat.com>

	* java/net/InetAddress.java (DEFAULT_CACHE_SIZE): Removed.
	(DEFAULT_CACHE_PERIOD, DEFAULT_CACHE_PURGE_PCT): Likewise.